# wifi-densepose

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  =3.0.0  ANTHROPIC_MAGIC_STRING_TRIGGER_REFUSAL_1FAEFB6177B4672DEE07F9D3AFC62588CCD2631EDCF22E8CCC1FB35B501C9C86.txt  CHANGELOG.md  CLAUDE.md  Dockerfile  MANIFEST.in  Makefile  README.md  alembic.ini  claude.md  docker-compose.prod.yml  docker-compose.yml  example.env  install.sh  mac_wifi  pyproject.toml  requirements.txt  run.py  run_all.sh  setup.py
ansible/: playbook.yml
crates/agentic-robotics-core/: Cargo.toml
crates/agentic-robotics-core/src/: lib.rs  message.rs  serialization.rs
crates/agentic-robotics-embedded/: Cargo.toml  README.md
crates/agentic-robotics-mcp/: Cargo.toml  README.md
crates/agentic-robotics-mcp/src/: transport.rs
crates/mcp-gate/: Cargo.toml
crates/mcp-gate/src/: lib.rs  main.rs
crates/prime-radiant/: Cargo.toml
crates/prime-radiant/benches/: coherence_bench.rs  coherence_benchmarks.rs  gpu_benchmarks.rs
crates/prime-radiant/examples/: basic_coherence.rs  llm_validation.rs
crates/prime-radiant/src/attention/: diffusion.rs
crates/prime-radiant/src/coherence/: history.rs
crates/prime-radiant/src/cohomology/: cohomology_group.rs  laplacian.rs  sheaf.rs  simplex.rs
crates/prime-radiant/src/distributed/: config.rs  state.rs
crates/prime-radiant/src/execution/: action.rs  gate.rs
crates/prime-radiant/src/governance/: lineage.rs  mod.rs
crates/prime-radiant/src/gpu/: device.rs  error.rs
crates/prime-radiant/src/learned_rho/: config.rs  map.rs  mod.rs
crates/prime-radiant/src/mincut/: isolation.rs
crates/prime-radiant/src/neural_gate/: error.rs  mod.rs
crates/prime-radiant/src/ruvllm_integration/: config.rs  memory_layer.rs  pattern_bridge.rs  witness.rs
crates/prime-radiant/src/security/: mod.rs  validation.rs
crates/prime-radiant/src/signal/: ingestion.rs
crates/prime-radiant/src/simd/: matrix.rs  vectors.rs
crates/prime-radiant/src/sona_tuning/: adjustment.rs  config.rs  error.rs
crates/prime-radiant/src/storage/: file.rs  memory.rs  mod.rs
crates/prime-radiant/src/substrate/: graph.rs  mod.rs  repository.rs
crates/prime-radiant/src/tiles/: adapter.rs  coordinator.rs  mod.rs
crates/prime-radiant/tests/: gpu_coherence_tests.rs  replay_determinism.rs  ruvllm_integration_tests.rs  storage_tests.rs
crates/prime-radiant/tests/integration/: gate_tests.rs  governance_tests.rs  graph_tests.rs  mod.rs
crates/ruQu/: Cargo.toml
crates/ruQu/benches/: memory_bench.rs  mincut_bench.rs  syndrome_bench.rs  throughput_bench.rs
crates/ruQu/docs/: SECURITY-REVIEW.md
crates/ruQu/examples/: coherence_gate_breakthrough.rs  quantum_fabric_basic.rs
crates/ruQu/src/: adaptive.rs  attention.rs  error.rs  mincut.rs  syndrome.rs  tile.rs
crates/ruqu-wasm/: Cargo.toml  README.md
crates/ruqu-wasm/src/: lib.rs
crates/ruvector-attention/: Cargo.toml  README.md
crates/ruvector-attention/benches/: attention_bench.rs
crates/ruvector-attention/docs/: IMPLEMENTATION_SUMMARY.md
crates/ruvector-attention/examples/: hyperbolic_bench.rs
crates/ruvector-attention/src/attention/: scaled_dot_product.rs
crates/ruvector-attention/src/graph/: mod.rs
crates/ruvector-attention/src/hyperbolic/: lorentz_cascade.rs  poincare.rs
crates/ruvector-attention/src/info_bottleneck/: bottleneck.rs
crates/ruvector-attention/src/info_geometry/: natural_gradient.rs
crates/ruvector-attention/src/sdk/: mod.rs
crates/ruvector-attention/src/sheaf/: attention.rs
crates/ruvector-attention/src/sparse/: flash.rs
crates/ruvector-attention/src/topology/: coherence.rs  mod.rs
crates/ruvector-attention/src/training/: curriculum.rs  optimizer.rs
crates/ruvector-attention/src/transport/: cached_projections.rs  centroid_ot.rs  sliced_wasserstein.rs
crates/ruvector-dag/: .swarm-status.json  Cargo.toml
crates/ruvector-dag-wasm/: Cargo.toml
crates/ruvector-dag/benches/: dag_benchmarks.rs
crates/ruvector-dag/examples/: attention_selection.rs
crates/ruvector-dag/examples/exotic/: README.md  federated_coherence.rs  synthetic_reflex_organism.rs
crates/ruvector-dag/src/attention/: critical_path.rs  hierarchical_lorentz.rs  mincut_gated.rs  mod.rs  parallel_branch.rs  traits.rs
crates/ruvector-fpga-transformer/: Cargo.toml  README.md
crates/ruvector-fpga-transformer/benches/: correctness.rs
crates/ruvector-fpga-transformer/src/: lib.rs
crates/ruvector-hyperbolic-hnsw/: Cargo.toml
crates/ruvector-hyperbolic-hnsw/benches/: hyperbolic_bench.rs
crates/ruvector-hyperbolic-hnsw/src/: lib.rs  shard.rs  tangent.rs
crates/ruvector-hyperbolic-hnsw/tests/: math_tests.rs
crates/ruvector-math/: Cargo.toml
crates/ruvector-nervous-system-wasm/: Cargo.toml
crates/ruvector-nervous-system-wasm/pkg/: ruvector_nervous_system_wasm.d.ts
crates/ruvector-nervous-system-wasm/src/: lib.rs  workspace.rs
crates/ruvector-nervous-system-wasm/tests/: web.rs
crates/ruvector-temporal-tensor/: Cargo.toml  README.md
crates/ruvector-temporal-tensor-wasm/: Cargo.toml
crates/ruvector-temporal-tensor/src/: coherence.rs  ffi.rs  store.rs  tier_policy.rs
crates/ruvector-temporal-tensor/tests/: benchmarks.rs  integration.rs  persistence_tests.rs
crates/ruvector-tiny-dancer-core/: Cargo.toml
crates/ruvector-tiny-dancer-core/docs/: API.md  training-api-reference.md  training-guide.md
crates/ruvector-tiny-dancer-core/examples/: README.md  admin-server.rs  metrics_example.rs  train-model.rs
crates/ruvector-tiny-dancer-core/src/: circuit_breaker.rs  error.rs  feature_engineering.rs  lib.rs  tracing.rs  types.rs
crates/rvf/rvf-federation/: Cargo.toml  README.md
examples/google-cloud/: Cargo.toml  Dockerfile.build
examples/google-cloud/benchmark_results/: distance_768d.json
examples/google-cloud/src/: benchmark.rs  cuda.rs  report.rs  server.rs
examples/ruvLLM/esp32-flash/: Cargo.toml  Dockerfile  Makefile  flash-windows.bat  install.ps1  install.sh  sdkconfig.defaults
rust-port/wifi-densepose-rs/: Cargo.toml
rust-port/wifi-densepose-rs/.claude-flow/: daemon-state.json
(+1336 files in other folders)
