[package]
name = "mcp-gate"
version = "0.1.0"
edition = "2021"
description = "MCP (Model Context Protocol) server for the Anytime-Valid Coherence Gate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruvector/ruvector"
keywords = ["mcp", "coherence", "gate", "agent", "permission"]
categories = ["network-programming", "asynchronous"]

[lib]

[[bin]]
name = "mcp-gate"
path = "src/main.rs"

[features]
default = []

[dependencies]
cognitum-gate-tilezero = { path = "../cognitum-gate-tilezero" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
hex = "0.4"
base64 = "0.21"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "test-util"] }
