[package]
name = "ruvector-nervous-system-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for ruvector-nervous-system bio-inspired AI components"
license = "MIT"
repository = "https://github.com/ruvnet/ruvector"
documentation = "https://ruv.io/ruvector"
keywords = ["wasm", "neural", "hdс", "btsp", "neuromorphic"]
categories = ["wasm", "science", "algorithms"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

# RNG for WASM
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Optimize for size (<100KB target)
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package."*"]
opt-level = "z"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
