[package]
name = "rvf-federation"
version = "0.1.0"
edition = "2021"
description = "Federated RVF transfer learning -- PII stripping, differential privacy, federated averaging"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruvnet/ruvector"
homepage = "https://github.com/ruvnet/ruvector"
readme = "README.md"
categories = ["science", "cryptography"]
keywords = ["federated-learning", "differential-privacy", "transfer-learning", "rvf"]
rust-version = "1.87"

[features]
default = ["std"]
std = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
sha3 = { version = "0.10", default-features = false }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
rand_distr = { version = "0.4", default-features = false }
regex = "1"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "federation_bench"
harness = false
