# Standalone package (not part of workspace)
[workspace]

[package]
name = "ruvllm-esp32-flash"
version = "0.2.0"
edition = "2021"
authors = ["RuVector Team"]
description = "Complete RuvLLM for ESP32 - Full-featured LLM inference with RAG, federation, and WASM support"
license = "MIT"
repository = "https://github.com/ruvnet/ruvector"
keywords = ["esp32", "llm", "inference", "embedded", "ai"]
categories = ["embedded", "science"]
publish = false  # This is a flashable project, not a library crate. Use ruvllm-esp32 from crates.io for the library.

[lib]
name = "ruvllm_esp32"
path = "src/lib.rs"

[[bin]]
name = "ruvllm-esp32"
path = "src/main.rs"

[features]
default = ["esp32"]
std = []
esp32 = ["esp-idf-svc", "esp-idf-hal", "esp-idf-sys"]
wasm = ["wasm-bindgen"]
host-test = ["std"]
federation = []
full = ["federation"]

[dependencies]
# ESP-IDF Framework (optional, for ESP32 target)
esp-idf-svc = { version = "0.49", default-features = false, optional = true }
esp-idf-hal = { version = "0.44", default-features = false, optional = true }
esp-idf-sys = { version = "0.35", default-features = false, features = ["binstart"], optional = true }

# WASM support (optional)
wasm-bindgen = { version = "0.2", optional = true }

# no_std compatible
heapless = { version = "0.8", features = ["serde"] }
libm = "0.2"

# Logging
log = "0.4"

# Error handling
anyhow = "1.0"

[target.'cfg(target_os = "espidf")'.dependencies]
esp_idf_logger = "0.1"

[build-dependencies]
embuild = "0.32"

[profile.release]
opt-level = "s"
lto = true
debug = false

[profile.dev]
opt-level = 1
debug = true

[profile.release-esp32]
inherits = "release"
opt-level = "z"       # Maximum size optimization for ESP32
lto = "fat"
codegen-units = 1
panic = "abort"
